--- a/src/sass/pages/index.sass
+++ b/src/sass/pages/index.sass
@@ -85,8 +85,11 @@ $Shark: #2A2D32
   &__control-file-image
     width: 100%
     margin: 10px 0
+    font-size: 0
+    display: block
 
     img
+      display: block
       width: 100%
 
   &__buttons
