--- a/src/template/index.html
+++ b/src/template/index.html
@@ -14,7 +14,7 @@
       <div class="container">
 
         <div class="form-container">
-          <form class="form" id="form" action="" method="post">
+          <form class="form" id="form" action="/sendform" method="post">
             <div class="form__control-wrap">
               <div class="form__left">
                 <div class="form__control">
