--- a/src/sass/pages/index.sass
+++ b/src/sass/pages/index.sass
@@ -1,5 +1,15 @@
 $Shark: #2A2D32
 
+.avatar
+  width: 60%
+  margin: 0 auto
+  img
+    width: 100%
+    display: block
+
+.error
+
+
 .form-container
   margin: 0 auto
   padding: 30px 0
