--- a/src/template/view/index.html
+++ b/src/template/view/index.html
@@ -13,7 +13,7 @@
 
       <div class="container">
         <div class="avatar">
-          <img src="./../img/about-photo.png" alt="">
+          <img src="./assets/img/about-photo.png" alt="">
         </div>
         {% if msg %}
           <div class="error">{{ msg }}</div>
@@ -53,7 +53,7 @@
                 <div class="form__control">
                   <label class="form__control-label form__control-label--file" for="image">
                     <input type="file" class="form__control-file" id="image" name="image">
-                    <img class="form__control-file--fake" src="./../img/folder.svg" alt="">
+                    <img class="form__control-file--fake" src="./assets/img/folder.svg" alt="">
                     <div class="form__control-file-title">Image</div>
                   </label>
                   <div id="file-image" class="form__control-file-image"></div>
