add slick, remove fonts

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -3,6 +3,10 @@
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/regular.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
+
+@import '../../node_modules/slick-carousel/slick/slick.scss'
+@import '../../node_modules/slick-carousel/slick/slick-theme.scss'
+
 @import config/_all
 @import layout/_all
 @import common/_all
