--- a/src/sass/pages/index.sass
+++ b/src/sass/pages/index.sass
@@ -121,3 +121,32 @@ $Shark: #2A2D32
     border: 2px solid $Shark
     padding: 10px 0
     text-align: center
+
+.slick-wrap
+  width: 80%
+  margin: 0 auto
+  height: 500px
+
+  .slider
+    width: 100%
+    height: 100%
+
+  .slider-slide
+    width: 100%
+    height: 100%
+    img
+      display: block
+      width: 100%
+      height: 100%
+      object-fit: cover
+
+.slick-list
+  height: 100%
+  .slick-track
+    height: 100%
+    .slick-slide
+      height: 100%
+      div
+        height: 100%
+        li
+          height: 100%
