--- a/src/template/index.html
+++ b/src/template/index.html
@@ -73,6 +73,38 @@
           </form>
         </div>
         
+        <div class="slick-wrap">
+          <ul class="slider">
+            <li class="slider-slide">
+              <img src="../../img/slides/slide-1.jpg" alt="">
+            </li>
+            <li class="slider-slide">
+              <img src="../../img/slides/slide-2.jpg" alt="">
+            </li>
+            <li class="slider-slide">
+              <img src="../../img/slides/slide-3.jpg" alt="">
+            </li>
+            <li class="slider-slide">
+              <img src="../../img/slides/slide-4.jpg" alt="">
+            </li>
+            <li class="slider-slide">
+              <img src="../../img/slides/slide-5.jpg" alt="">
+            </li>
+            <li class="slider-slide">
+              <img src="../../img/slides/slide-6.jpg" alt="">
+            </li>
+          </ul>
+
+          <div class="slider-controls">
+            <div class="slider-control prev">
+              <svg>
+                <use xlink:href=""></use>
+              </svg>
+            </div>
+            <div class="slider-control next"></div>
+          </div>
+        </div>
+
       </div>
     </section>
     
