--- a/src/template/layout/_Layout.html
+++ b/src/template/layout/_Layout.html
@@ -21,6 +21,7 @@
       {% block footer %}{% endblock %}
     </div>
 
+    {% block scripts %}{% endblock %}
     <!-- body:js -->
     <!-- endinject -->
   </body>
